Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28291

Hashicorp: Cache variables claim to be dynamic but changes are ignored

    XMLWordPrintable

Details

    Description

      # The test presumes that the local vault is running at $VAULT_ADDR,
      # and the token is configured in $VAULT_TOKEN
       
       --exec vault secrets disable bug
      --exec vault secrets enable -path /bug -version=2 kv
      --exec vault kv put /bug/1 data=0123456789012345678901234567890A > /dev/null
       
      --let $restart_parameters= --plugin-load-add=hashicorp_key_management --hashicorp-key-management-vault-url="$VAULT_ADDR/v1/bug/" --hashicorp-key-management-token="$VAULT_TOKEN"
       
      --source include/restart_mysqld.inc
       
      SELECT
        @@HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT,
        @@HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT;
       
      SET GLOBAL
        HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT= 1,
        HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT= 1;
       
      SELECT
        @@HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT,
        @@HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT;
      

      preview-10.9-MDEV-20119-misc e62a2a06

      @@HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT	@@HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT
      0	60000
      SET GLOBAL
      HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT= 1,
      HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT= 1;
      SELECT
      @@HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT,
      @@HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT;
      @@HASHICORP_KEY_MANAGEMENT_CACHE_VERSION_TIMEOUT	@@HASHICORP_KEY_MANAGEMENT_CACHE_TIMEOUT
      0	60000
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.